Updates for androidx

--- a/awm-example/src/main/res/xml/preferences.xml
+++ b/awm-example/src/main/res/xml/preferences.xml
@@ -1,4 +1,4 @@
-<android.support.v7.preference.PreferenceScreen
+<androidx.preference.PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
@@ -45,4 +45,4 @@
     </PreferenceCategory>
 
 
-</android.support.v7.preference.PreferenceScreen>
+</androidx.preference.PreferenceScreen>
